Add split and income transactions
